Se genero un nuevo boton en donde genera el PDF

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
  <nav class="navbar nabar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a routerLink="task" routerLinkActive = "active" class="nav-link"> List of Task</a>
+            <a routerLink="task" routerLinkActive = "active" class="nav-link"> List of Task</a> 
             <a routerLink="register-task" routerLinkActive = "active" class="nav-link"> Add Task</a>
+            <a routerLink="pdf" routerLinkActive = "active" class="nav-link"> Generate Pdf</a>
         </li>
     </ul>
 </nav>
