Se abre en una nueva ventana el pdf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <li class="nav-item">
             <a routerLink="task" routerLinkActive = "active" class="nav-link"> List of Task</a> 
             <a routerLink="register-task" routerLinkActive = "active" class="nav-link"> Add Task</a>
-            <a routerLink="pdf" routerLinkActive = "active" class="nav-link"> Generate Pdf</a>
+            <a routerLink="pdf" routerLinkActive = "active" class="nav-link" target="_blank"> Generate Pdf</a>
         </li>
     </ul>
 </nav>
