--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
- <nav class="navbar nabar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a routerLink="task" routerLinkActive = "active" class="nav-link"> List of Task</a> 
-            <a routerLink="register-task" routerLinkActive = "active" class="nav-link"> Add Task</a>
-            <a routerLink="pdf" routerLinkActive = "active" class="nav-link" target="_blank"> Generate Pdf</a>
-        </li>
+      <li class="nav-item">
+        <a routerLink="task" routerLinkActive="active" class="nav-link">List of Task</a> 
+      </li>
+      <li class="nav-item">
+        <a routerLink="register-task" routerLinkActive="active" class="nav-link">Add Task</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="pdf" routerLinkActive="active" class="nav-link" target="_blank">Generate Pdf</a>
+      </li>
     </ul>
-</nav>
+  </nav>
 
 <h1 class="text-center">Task Keeper</h1>
 
