--- a/src/app/list-task/list-task.component.css
+++ b/src/app/list-task/list-task.component.css
@@ -1,9 +1,12 @@
-#larraExplica{
-    text-align: center;
-    align-items: top;
+td{
+    text-align: left;
+    align-items: normal;
 }
 
-td{
-    text-align: center;
-    align-items: normal;
+th{
+    width: 20%;
+}
+
+.pointer{
+    cursor: pointer;
 }
