--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <h2>List of Task</h2>
 
 <table class="table table-striped">
@@ -12,10 +13,53 @@
         <td>{{task.name}}</td>
         <td>{{task.description}}</td>
         <td>
-        <!--   <button (click)="updateTask(task.id,task)" class="btn btn-info"> Editar </button> -->
+           <button (click)="updateTask(task.id,task)" class="btn btn-info"> Editar </button> 
         <br>
         <button type="button" class="btn btn-info" (click)="deleteTask(task.id)" style="margin-left: 10px;" id="larraExplica"> Delete </button>
         </td>
     </tr>
 </tbody>
 </table>
+-->
+
+<!-- ------------------------------------------ -->
+
+    <!-- Definición de columnas usando ngFor -->
+    <!-- 
+    <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+        <th mat-header-cell *matHeaderCellDef> {{ column | titlecase }} </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+    -->
+
+<table mat-table [dataSource]="taskArray" class="mat-elevation-z5">
+
+    <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let task"> {{task.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+        <td mat-cell *matCellDef="let task"> {{task.description}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let task"> 
+            <a class="pointer" style="color: #c94c4c">
+                <mat-icon>delete</mat-icon>
+            </a>
+            <a class="pointer" style="color: #484f4f">
+                <mat-icon>edit</mat-icon>
+            </a>
+         </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
+
