--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -22,17 +22,6 @@
 </table>
 -->
 
-<!-- ------------------------------------------ -->
-
-    <!-- Definición de columnas usando ngFor -->
-    <!-- 
-    <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef> {{ column | titlecase }} </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-    -->
-
 <table mat-table [dataSource]="taskArray" class="mat-elevation-z5">
 
     <ng-container matColumnDef="nombre">
@@ -48,7 +37,7 @@
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let task"> 
-            <a class="pointer" style="color: #c94c4c">
+            <a class="pointer" style="color: #c94c4c" (click)="deleteTask(task.id)">
                 <mat-icon>delete</mat-icon>
             </a>
             <a class="pointer" style="color: #484f4f">
