Acomodando codigo antes de proxima funcionalidad

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <a routerLink="register-task" routerLinkActive="active" class="nav-link">Add Task</a>
       </li>
       <li class="nav-item">
-        <a routerLink="pdf" routerLinkActive="active" class="nav-link" target="_blank">Generate Pdf !</a>
+        <a routerLink="pdf" routerLinkActive="active" class="nav-link" target="_blank">Generate Pdf </a>
       </li>
     </ul>
   </nav>
