--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -1,27 +1,3 @@
-<!-- 
-<h2>List of Task</h2>
-
-<table class="table table-striped">
-<thead class="table-dark">
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-    </tr>
-</thead>
-<tbody>
-    <tr *ngFor="let task of taskArray"> 
-        <td>{{task.name}}</td>
-        <td>{{task.description}}</td>
-        <td>
-           <button (click)="updateTask(task.id,task)" class="btn btn-info"> Editar </button> 
-        <br>
-        <button type="button" class="btn btn-info" (click)="deleteTask(task.id)" style="margin-left: 10px;" id="larraExplica"> Delete </button>
-        </td>
-    </tr>
-</tbody>
-</table>
--->
-
 <table mat-table [dataSource]="taskArray" class="mat-elevation-z5">
 
     <ng-container matColumnDef="nombre">
@@ -37,10 +13,10 @@
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let task"> 
-            <a class="pointer" style="color: #c94c4c" (click)="deleteTask(task.id)">
+            <a class="pointer" style="color: #c94c4c" (click)="deleteTask(task.id)" matTooltip="Delete Task">
                 <mat-icon>delete</mat-icon>
             </a>
-            <a class="pointer" style="color: #484f4f">
+            <a class="pointer" style="color: #484f4f" matTooltip="Modify Task">
                 <mat-icon>edit</mat-icon>
             </a>
          </td>
