--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="taskArray.length > 0">
 <table mat-table [dataSource]="taskArray" class="mat-elevation-z5">
 
     <ng-container matColumnDef="nombre">
@@ -25,6 +26,10 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
 
+<div *ngIf="taskArray.length == 0">
+    <h1>No hay tareas para mostrar</h1>
+</div>
 
 
