--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -26,6 +26,12 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<div id="btn-delete-all">
+    <button mat-raised-button color="warn" (click)="deleteAllTasks()"> Warn </button>
+</div>
+
+
 </div>
 
 <div *ngIf="taskArray.length == 0">
