Delete All funcionando

--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -28,7 +28,7 @@
 </table>
 
 <div id="btn-delete-all">
-    <button mat-raised-button color="warn" (click)="deleteAllTasks()"> Warn </button>
+    <button mat-raised-button color="warn" (click)="deleteAllTasks()"> Delete All </button>
 </div>
 
 
