Se agrega el calculate date

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
       <li class="nav-item">
         <a routerLink="pdf" routerLinkActive="active" class="nav-link" target="_blank">Generate Pdf </a>
       </li>
+      <li class="nav-item">
+        <a routerLink="date" routerLinkActive="active" class="nav-link" >Date </a>
+      </li>
     </ul>
   </nav>
 
