--- a/src/app/list-task/list-task.component.html
+++ b/src/app/list-task/list-task.component.html
@@ -27,18 +27,18 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<div id="btn-delete-all">
-    <button mat-raised-button color="warn" (click)="addTask()"> Add New </button>
+<div>
+    <button class="btn btn-success" (click)="addTask()"> + </button>
 </div>
 
 <br>
+    <button mat-raised-button (click)="generatePdf()"> Generate PDF </button>    
     <button mat-raised-button color="warn" (click)="deleteAllTasks()"> Delete All </button>
-    <button mat-raised-button color="warn" (click)="generatePdf()"> Generate PDF </button>
 </div>
 
 <div *ngIf="taskArray.length == 0">
     <h1>No hay tareas para mostrar</h1>
-    <button mat-raised-button color="warn" (click)="addTask()"> Add New </button>
+    <button class="btn btn-success" (click)="addTask()"> Add Task </button>
 </div>
 
 
