--- a/src/app/Components/Task/update-task/list-task/list-task.component.html
+++ b/src/app/Components/Task/update-task/list-task/list-task.component.html
@@ -3,23 +3,33 @@
 
     <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let task"> {{task.name}} </td>
+        <td mat-cell *matCellDef="let task">
+            <span [ngStyle]="{'text-decoration': task.completed ? 'line-through' : 'none'}">{{task.name}}</span>
+        </td>
     </ng-container>
-
+    
     <ng-container matColumnDef="descripcion">
         <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-        <td mat-cell *matCellDef="let task"> {{task.description}} </td>
+        <td mat-cell *matCellDef="let task">
+            <span [ngStyle]="{'text-decoration': task.completed ? 'line-through' : 'none'}">{{task.description}}</span>
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let task"> 
+
             <a class="pointer" style="color: #c94c4c" (click)="deleteTask(task.id)" matTooltip="Delete Task">
                 <mat-icon>delete</mat-icon>
             </a>
+
             <a class="pointer" style="color: #484f4f" (click)="goToUpdateTask(task.id)" matTooltip="Modify Task">
                 <mat-icon>edit</mat-icon>
             </a>
+
+            <button mat-icon-button (click)="toggleComplete(task)">
+                <mat-icon>{{ task.completed ? 'check_circle' : 'radio_button_unchecked' }}</mat-icon>
+              </button>
          </td>
     </ng-container>
 
@@ -27,7 +37,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<div>
+<div class="">
     <button class="btn btn-success" (click)="addTask()"> + </button>
 </div>
 
