Comenzando con las bases del componente de Actividades

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
       <li class="nav-item">
         <a routerLink="date" routerLinkActive="active" class="nav-link" >Date </a>
       </li>
+      <li class="nav-item">
+        <a routerLink="actividad" routerLinkActive="active" class="nav-link" >Date New</a>
+      </li>
     </ul>
   </nav>
 
