--- a/src/app/Components/Actividades/list-actividades/list-actividades.component.html
+++ b/src/app/Components/Actividades/list-actividades/list-actividades.component.html
@@ -1,15 +1,6 @@
 <div *ngIf="actividadesArray.length > 0">
     <table mat-table [dataSource]="actividadesArray" class="mat-elevation-z5">
         
-         <!-- 
-        <ng-container matColumnDef="descripcion">
-            <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-            <td mat-cell *matCellDef="let actividad">
-                <span [ngStyle]="{'text-decoration': actividad.completed ? 'line-through' : 'none'}">{{actividad.description}}</span>
-            </td>
-        </ng-container>
---> 
-  
   <ng-container matColumnDef="descripcion">
     <th mat-header-cell *matHeaderCellDef> Descripcion </th>
     <td mat-cell *matCellDef="let actividad">{{ actividad.descripcion }}</td>
@@ -24,42 +15,31 @@
     <th mat-header-cell *matHeaderCellDef> Fecha de Fin </th>
     <td mat-cell *matCellDef="let actividad">{{ actividad.fechaFin | date }}</td>
   </ng-container>
+        
+  <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let actividad">
 
-<!-- 
-        <ng-container matColumnDef="descripcion">
-            <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-
-            <td mat-cell *matCellDef="let actividad">{{ actividad.descripcion }}</td>
-
-             <td mat-cell *matCellDef="let actividad">
-                <span [ngStyle]="{'text-decoration': actividad.completed ? 'line-through' : 'none'}">{{actividad.description}}</span>
-            </td>
-         
-        </ng-container>
-    -->
-
-        <!-- 
-
-        <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef> Acciones </th>
-            <td mat-cell *matCellDef="let task">
-
-                <a class="pointer" style="color: #c94c4c" (click)="deleteTask(task.id)" matTooltip="Delete Task">
-                    <mat-icon>delete</mat-icon>
-                </a>
-
+             
+            <a class="pointer" style="color: #c94c4c" (click)="deleteActividad(actividad.id)" matTooltip="Delete Actividad">
+                <mat-icon>delete</mat-icon>
+            </a>
+            
+                <!-- 
                 <a class="pointer" style="color: #484f4f" (click)="goToUpdateTask(task.id)" matTooltip="Modify Task">
                     <mat-icon>edit</mat-icon>
                 </a>
-
+                -->
+                
+                <!-- 
                 <button mat-icon-button (click)="toggleComplete(task)">
                     <mat-icon>{{ task.completed ? 'check_circle' : 'radio_button_unchecked' }}</mat-icon>
                 </button>
-            </td>
-        </ng-container>
+                -->
 
-        -->
-        
+        </td>
+   </ng-container>
+
          
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
