--- a/src/app/Components/Actividades/list-actividades/list-actividades.component.html
+++ b/src/app/Components/Actividades/list-actividades/list-actividades.component.html
@@ -16,11 +16,14 @@
     <td mat-cell *matCellDef="let actividad">{{ actividad.fechaFin | date }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="result">
-    <th mat-header-cell *matHeaderCellDef> Tiempo Transcurrido </th>
-    <td mat-cell *matCellDef="let actividad">{{ actividad.result | date }}</td>
-  </ng-container>
-        
+
+<ng-container matColumnDef="result">
+  <th mat-header-cell *matHeaderCellDef> Resultado </th>
+  <td mat-cell *matCellDef="let actividad">{{ actividad.result }}</td>
+
+</ng-container>
+
+
   <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let actividad">
