Boton de 'add' en lista de actividades alineado a la derecha

--- a/src/app/Components/Actividades/list-actividades/list-actividades.component.css
+++ b/src/app/Components/Actividades/list-actividades/list-actividades.component.css
@@ -24,7 +24,7 @@ th{
     margin-top: 15px;
   }
   
-  #addTask {
-    text-align: right; /* Alinea el contenido a la derecha */
+  #addActividad {
+    text-align: right; 
   }
   
