Validacion para cuando no hay ninguna actividad

--- a/src/app/Components/Actividades/list-actividades/list-actividades.component.html
+++ b/src/app/Components/Actividades/list-actividades/list-actividades.component.html
@@ -57,18 +57,9 @@
         <button class="btn btn-success" (click)="addActividad()"> + </button>
     </div>
 
-    
-    <!-- 
-    
-    <br>
-
-    <button mat-raised-button (click)="generatePdf()"> Generate PDF </button>
-    <button mat-raised-button color="warn" (click)="deleteAllTasks()"> Delete All </button>
-    
 </div>
-    -->
-    <!-- 
+     
 <div *ngIf="actividadesArray.length == 0">
     <h1>No hay actividades para mostrar</h1>
-    <button class="btn btn-success" (click)="addTask()"> Add Task </button> -->
+    <button class="btn btn-success" (click)="addActividad()"> Add Actividad </button> 
 </div>
