Implementando estilos y consumiendo back en 'Dolar'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
       <li class="nav-item">
         <a routerLink="actividad" routerLinkActive="active" class="nav-link" >Date New</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="dolar" routerLinkActive="active" class="nav-link" >Dolar</a>
+      </li>
     </ul>
   </nav>
 
