--- a/src/app/Components/dolar/dolar.component.html
+++ b/src/app/Components/dolar/dolar.component.html
@@ -1,3 +1,7 @@
+<body>
+    
+
+
 <mat-grid-list cols="3" rowHeight="2:3">
     <mat-grid-tile *ngFor="let dolar of dolarList">
       <mat-grid-tile-header>
@@ -23,3 +27,4 @@
     </mat-grid-tile>
   </mat-grid-list>
   
+</body>
