--- a/src/app/Components/Task/list-task/list-task.component.html
+++ b/src/app/Components/Task/list-task/list-task.component.html
@@ -11,7 +11,7 @@
     <ng-container matColumnDef="descripcion">
         <th mat-header-cell *matHeaderCellDef> Descripcion </th>
         <td mat-cell *matCellDef="let task">
-            <span [ngStyle]="{'text-decoration': task.completed ? 'line-through' : 'none'}">{{task.description}}</span>
+            <span [ngStyle]="{'text-decoration': task.completed ? 'line-through' : 'none'}">{{ task.description ? task.description : '-' }}</span>
         </td>
     </ng-container>
 
