--- a/src/app/Components/dolar/dolar.component.css
+++ b/src/app/Components/dolar/dolar.component.css
@@ -1,14 +1,20 @@
-
-.seccion-header {
-  color: #fff;
-  padding: 10px;
+body,html{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-.seccion-footer {
-  color: #fff;
-  padding: 5px; 
-  text-align: center; 
+.card{
+  margin: 10px;
+  border: 5px solid black;
 }
+
+.card .footer{
+  background-color: grey;
+  padding: 2px;
+}
+
 
 .seccion-compra-venta {
   display: flex;
@@ -27,6 +33,3 @@
   color: #e74c3c;
 }
 
-body{
-  background-color: #aea28856;
-}
